crates/biome_cli/tests/snapshots/main_cases_reporter_github/reports_diagnostics_github_format_command.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --reporter=github main.ts index.ts
```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
::error title=format,file=index.ts,line=1,endLine=1,col=2,endColumn=2::Formatter would have printed the following content:
```

```block
::error title=format,file=main.ts,line=1,endLine=1,col=2,endColumn=2::Formatter would have printed the following content:
```
