crates/biome_cli/tests/snapshots/main_cases_reporter_github/reports_diagnostics_github_from_nested_directory.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `packages/ui/main.ts`

```ts
debugger;

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
::error title=lint/suspicious/noDebugger,file=<TEMP_DIR>/reports_diagnostics_github_from_nested_directory/packages/ui/main.ts,line=1,endLine=1,col=1,endColumn=10::This is an unexpected use of the debugger statement.
```
